--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/earningsLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Earnings of the Week"
+                android:text="Total Earnings"
                 android:textColor="#CCCCCC"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
